[package]
name = "ifeo_bypass"
version = "0.1.0"
authors = ["apkipa <apkipa1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
detour = "0.7"
winapi = { version = "0.3", features = ["winuser", "wincon", "consoleapi", "processthreadsapi", "winerror", "winnt", "handleapi"] }
kernel32-sys = "0.2"
ntapi = "0.3"
